--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
+    />
     <title>Library App</title>
   </head>
   <body>
@@ -16,13 +19,13 @@
     <button id="toggle-form">NEW BOOK</button>
     <form class="hidden" id="book-form">
       <label>Title:</label>
-      <input type="text" name="title" id="title">
+      <input type="text" name="title" id="title" required />
       <label>Author:</label>
-      <input type="text" name="author" id="author">
+      <input type="text" name="author" id="author" required />
       <label>Pages:</label>
-      <input type="number" name="pages" id="pages">
+      <input type="number" name="pages" id="pages" required />
       <label>Read:</label>
-      <input type="checkbox" name="read" id="read">
+      <input type="checkbox" name="read" id="read" />
       <button id="submit-book">Add Book</button>
     </form>
     <script src="javascript/main.js"></script>
